--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,7 @@ gleam_time = ">= 1.4.0 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
 filepath = ">= 1.1.2 and < 2.0.0"
 simplifile = ">= 2.3.0 and < 3.0.0"
+gleam_http = ">= 4.1.1 and < 5.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
