--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,8 @@ filepath = ">= 1.1.2 and < 2.0.0"
 simplifile = ">= 2.3.0 and < 3.0.0"
 gleam_http = ">= 4.1.1 and < 5.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
+pog = ">= 4.1.0 and < 5.0.0"
+gleam_otp = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
